# python-django-development-project-52

./: .gitignore  Makefile  README.md  build.sh  main.py  pyproject.toml
labels/: models.py  tests.py  urls.py
labels/templates/: labels.html  labels_create.html  labels_update.html
locale/en/LC_MESSAGES/: django.po
statuses/: models.py  tests.py
statuses/templates/: statuses.html  statuses_create.html  statuses_delete.html  statuses_update.html
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/labels/templates/: labels_create.html  labels_delete.html  labels_update.html
task_manager/management/commands/: create_superuser_from_env.py
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/statuses/templates/: statuses_create.html  statuses_update.html
task_manager/tasks/: filters.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_tasklabel_task_labels.py  (+2 more)
task_manager/templates/: base.html
task_manager/users/: models.py  tests.py  urls.py  views.py
tasks/: filters.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0002_tasklabel_task_labels.py
tasks/templates/: tasks.html  tasks_create.html  tasks_detail.html
templates/: base.html  index.html  users.html
users/: urls.py  views.py
users/templates/: login.html  user_delete.html  users.html
(+13 files in other folders)
